--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <h1>{{ title }}</h1>
-<app-test *ngIf="isVisible"></app-test>
-<app-test *ngIf="text === 'yellow'"></app-test>
-
-<button (click)="onClick()">Click Me!</button>
-
-<div *ngFor="let fruit of fruitsList">{{ fruit }}</div>
+<ul *ngIf="status === 'ready'">
+  <li *ngFor="let quote of data">
+    {{ quote.text }}
+  </li>
+</ul>
+<div *ngIf="status === 'loading'">Loading...</div>
+<div *ngIf="status === 'error'">Though luck! Come back tomorrow</div>
